--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ criterion = { version = "0.8.1", default-features = false, features = [
     "html_reports",
 ] }
 csv = "1.4.0"
+daachorse = "1.0.0"
 derive_builder = "0.20.2"
 encoding = "0.2.33"
 encoding_rs = "0.8.35"
@@ -79,7 +80,6 @@ unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.25"
 unicode-segmentation = "1.12.0"
 url = "2.5.8"
-yada = "0.5.1"
 
 [profile.release]
 lto = true
