Integrate lindera-python into monorepo workspace and CI/CD
- Move lindera-python source from tmp to root
- Add lindera-python to workspace members in Cargo.toml
- Standardize lindera-python/Cargo.toml with workspace settings
- Integrate lindera-python CI/CD into monorepo workflows (regression, periodic, release)
- Add multi-platform Python wheel build and PyPI/Crates.io publish jobs to release.yml
- Implement robust test logic using cargo check for platforms without test runners
- Clean up redundant .github directory in lindera-python

--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -59,5 +59,16 @@ jobs:
           target: ${{ matrix.platform.target }}
           components: rustfmt, clippy
 
+      - name: Setup Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: 3.x
+
       - name: Run test
-        run: cargo test --target "${{ matrix.platform.target }}" --all-features ${{ matrix.platform.skip_test_run == true && '--no-run' || '' }}
+        shell: bash
+        run: |
+          if [ "${{ matrix.platform.skip_test_run }}" == "true" ]; then
+            cargo check --target "${{ matrix.platform.target }}" --all-features
+          else
+            cargo test --target "${{ matrix.platform.target }}" --all-features
+          fi
