--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "lindera-unidic",
     "lindera",
     "lindera-cli",
+    "lindera-python",
 ]
 resolver = "2"
 
@@ -44,7 +45,7 @@ derive_builder = "0.20.2"
 encoding = "0.2.33"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
-flate2 = "1.1.5"
+flate2 = "1.1.8"
 glob = "0.3.3"
 kanaria = "0.2.0"
 log = "0.4.29"
@@ -60,7 +61,7 @@ regex = "1.12.2"
 reqwest = { version = "0.13.1", features = [
     "rustls",
 ], default-features = false }
-rkyv = { version = "0.8.13", features = ["bytecheck"] }
+rkyv = { version = "0.8.14", features = ["bytecheck"] }
 rucrf = "0.3.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
@@ -68,7 +69,7 @@ serde_yaml_ng = "0.10.0"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
 tar = "0.4.44"
-thiserror = "2.0.17"
+thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = [
     "rt",
     "macros",
