Finalize lindera-python integration: Update CI and documentation
- Add pytest to regression.yml for Linux CI jobs
- Add Python binding section to root README.md
- Update lindera-python/README.md with monorepo setup steps and submodule-based API examples

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -75,3 +75,10 @@ jobs:
           else
             cargo test --target "${{ matrix.platform.target }}" --all-features
           fi
+
+      - name: Run Python test
+        if: matrix.platform.runner == 'ubuntu-latest' && matrix.platform.skip_test_run != true
+        shell: bash
+        run: |
+          make init
+          make python-test
