Refactor: Integrate Lindera Python and WASM into monorepo
- Consolidate Makefile functionality into root Makefile
  - Removed lindera-python/Makefile and lindera-wasm/Makefile
  - Added python-clean, wasm-clean, wasm-build-example, wasm-run-example targets
  - Reorganized targets for better readability
- Optimize .gitignore
  - Consolidated rules from python/wasm sub-directories into root .gitignore
- Enhance CI workflows
  - Split publish-wasm into build-wasm and publish-npm in release.yml
  - Add test-python and test-wasm jobs to periodic.yml
  - Update deploy-docs.yml to build and deploy WASM example under /demo
- Cargo.toml
  - Added lindera-wasm to workspace members

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'docs/**'
+      - 'lindera-wasm/**'
 
 jobs:
   deploy:
@@ -21,15 +22,29 @@ jobs:
           curl -L https://github.com/rust-lang/mdBook/releases/download/v0.4.37/mdbook-v0.4.37-x86_64-unknown-linux-gnu.tar.gz | tar -xz -C mdbook
           echo "$PWD/mdbook" >> $GITHUB_PATH
 
+      - name: Install wasm-pack
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          registry-url: "https://registry.npmjs.org"
+
       - name: Build Book (English)
         run: mdbook build docs
 
       - name: Build Book (Japanese)
         run: mdbook build docs/ja
 
+      - name: Build WASM example
+        run: make wasm-build-example
+
       - name: Setup Pages Directory
         run: |
           mv docs/ja/book docs/book/ja
+          mkdir -p docs/book/demo
+          cp -r lindera-wasm/example/dist/* docs/book/demo/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
