--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "lindera",
     "lindera-cli",
     "lindera-python",
+    "lindera-wasm",
 ]
 resolver = "2"
 
@@ -32,10 +33,13 @@ lindera-ipadic-neologd = { version = "2.0.1", path = "lindera-ipadic-neologd" }
 lindera-ko-dic = { version = "2.0.1", path = "lindera-ko-dic" }
 lindera-unidic = { version = "2.0.1", path = "lindera-unidic" }
 lindera = { version = "2.0.1", path = "lindera" }
+lindera-cli = { version = "2.0.1", path = "lindera-cli" }
+lindera-python = { version = "2.0.1", path = "lindera-python" }
+lindera-wasm = { version = "2.0.1", path = "lindera-wasm" }
 
 anyhow = "1.0.100"
 byteorder = "1.5.0"
-clap = { version = "4.5.54", features = ["derive", "cargo"] }
+clap = { version = "4.5.56", features = ["derive", "cargo"] }
 criterion = { version = "0.8.1", default-features = false, features = [
     "html_reports",
 ] }
@@ -95,3 +99,6 @@ opt-level = 3
 opt-level = 3
 [profile.test.build-override]
 opt-level = 3
+
+[profile.release.package.lindera-wasm]
+opt-level = "s"
