--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -605,4 +605,4 @@ jobs:
           cd lindera-wasm/pkg
           npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
